Clean up a lot of Java warnings
Most of these changes are to clean up various Checkstyle warnings, but a few are also in response to fussing from the SonarLint plugin in VS Code.

Some common types of changes:

   - Several magic numbers in `Server.java` and `UserController.java`. There were
     also lots of magic numbers in the test code, but I decided to just suppress those
     warnings since it wasn't clear that naming those constants would have actually
     helped.
   - Made several fields private that should have been private all along. Having
     Checkstyle look for this will be worth the price of admission alone; I was
     amazed at how much of that had crept in over the years.
   - Fixed a *bunch* of methods in `UserControllerSpec` that had names
     starting with an uppercase letter, when Java methods should all start
     with a lowercase letter, leaving uppercase starts for just classes.
   - Cleaned up imports in several places.
   - Fixed several places where we had the arguments to `assertEquals()` reversed.
     You're supposed to have the expected value first, and then the call second, and
     we'd gotten that turned around in several places.
   - I added a bunch of comments in places where things seemed like they could
     use some additional explanation.
   - I extracted a new `generateAvatar()` method in `UserController.java` to try
     to better isolate and document that logic.